Coverflow Events Transformation Bug. Many visual fixes.
Fixed Menu overlaping with logo
Fixed Logo being cut off
Fixed twitter follow being streched.
Added Charlotte West photo.
Fixed advert spacing when images are bigger than standard.
Fixed Basket dropdown size

--- a/msl/stylesheet/su/su_layout.css
+++ b/msl/stylesheet/su/su_layout.css
@@ -406,7 +406,7 @@ background: #f5f5f5 url('http://i.imgur.com/kEAnBaM.jpg');*/
 }
 
 .menu-line{
-	margin-top: 38px !important;
+	margin-top: 33px !important;
 }
 
 div.seemore {
@@ -1451,6 +1451,16 @@ line-height: 30px !important;
 .page_ents.page_event #msl_event .event_ticket input.button {
 float: left !important;
 }
+
+
+/* SU Social */
+
+.su-twitter-follow{
+	float:right; 
+	padding-top: 22px;
+	width:190px;
+}
+
 
 /***********
 
