--- a/msl/stylesheet/su/su_snippet_advert.css
+++ b/msl/stylesheet/su/su_snippet_advert.css
@@ -5,11 +5,13 @@
 	margin-bottom: 7px;
 }
 .fulladvert,.halfadvert,.advertteaser{
-	height: 60px;
 	display:inline-block;
 	text-transform: uppercase;
 	font-size: 10px;
 	vertical-align: top;
+}
+.fulladvert,.halfadvert,.fulladvert img,.halfadvert img{
+	height: 60px;
 }
 .fulladvert{
 	width: 468px;
